Aligned Elements More Correct Visually.

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body {
 }
 
 .topnav {
+    border-bottom: solid;
+    border-bottom-width:thick ;
     margin-left: 300px;
     margin-right: 100px;
     padding: 10px;
@@ -28,25 +30,31 @@ footer {
   background-color: chocolate;
 }
 
+h1{
+  font-size: 60px;
+}
+
 .u{
   
   border-bottom: solid;
   border-bottom-width:thick ;
-  margin: 140px;
-  width: 500px;
+  margin-left: 300px;
+  margin-top: 140px;
+  width: 1200px;
 }
 
 .rightpot{
-  margin-top: 983px;
+  
   margin-right: 140px;
+  
   float: right;
   
 }
 
 .leftpot{
   
-  margin-left: 140px;
-  margin-top: 1267px;
+  margin-left: 310px;
+  margin-top: 130px;
 }
 
 .banner{
@@ -56,8 +64,8 @@ footer {
 
 .firstpara{
   text-size-adjust: 20;
-  margin-left: 202px;
-  margin-top: 1019px;
+  margin-left: 350px;
+  margin-top: 100px;
   
   
 }
@@ -90,6 +98,10 @@ footer {
 .card button:hover {
   opacity: 0.7;
 }
-.products {
-  display: inline-grid;
+
+.products{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  
 }
